# Initial-Music-Roadtrip-calendar-ingest-data-platform

./: .env.example  .gitignore  AGENTS.md  CITYSPARK_INTERNAL_STRATEGY.md  Makefile  README.md  agent.md  pyproject.toml
app/: __init__.py  main.py
app/auth/: __init__.py  create_password_hash.py  passwords.py  security.py
app/core/: __init__.py  config.py
app/db/: database.py  models.py
app/models/: __init__.py  source.py
app/services/: __init__.py  api_feed_service.py  app_feed_service.py  app_search_service.py  (+46 more)
docs/: CitySpark_v1.json  app-feed-contract.md  app-search-and-map-contract.md  artist-registry-and-genre-normalization.md  background-jobs-and-scheduler.md  calendar-ingest-flowchart.md  calendar-source-intelligence.md  calendar-source-research-and-city-crawl-shakedown.md  category-system.md  current-normalization-contract.md  current-poi-inventory-snapshots.md  event-dedupe-and-source-claims.md  event-photo-rescue-policy.md  event-quality-workbench.md  incoming-poi-candidate-audit.md  itinerary-roadtrip-contract.md  jambase_api_reference.md  linear-project-roadmap.md  live-provider-sandbox.md  mapotic-export-normalization-audit.md  music-roadtrip-product-thesis.md  musicroadtrip_site_corpus.md  provider-mapping-reference.md  provider-pipeline-handoff.md  regions-and-search-seeds.md  scott-data-pipeline-scope.md  security-hardening.md  source-extraction-policy.md  source-trust-and-partner-reporting.md  ticket-page-image-fallback.md  ticket_link_summary.md  unified-event-review-workbench.md
tests/: conftest.py  test_app.py  test_mapotic_poi.py
(+192 files in other folders)
